# hwui

./: .gitignore  CMakeLists.txt  README.md  android-8.0.0_r4.patch
cutils/: properties.cpp  properties.h
log/: log.c  log.h
minikin/: CmapCoverage.cpp  GraphemeBreak.cpp  Layout.cpp
sample/: SampleApplication.cpp  SampleApplication.h  main.cpp  main2.cpp  main3.cpp
src/: BakedOpDispatcher.cpp  BakedOpRenderer.cpp  Caches.cpp  Caches.h  DeferredLayerUpdater.cpp  DeferredLayerUpdater.h  DisplayList.cpp  DisplayList.h  FontRenderer.cpp  FontRenderer.h  FrameBuilder.cpp  GlopBuilder.cpp  GlopBuilder.h  GpuMemoryTracker.cpp  LayerBuilder.cpp  PathParser.cpp  PathParser.h  Program.cpp  Properties.cpp  RecordedOp.h  RecordingCanvas.cpp  RecordingCanvas.h  RenderNode.cpp  RenderNode.h  RenderProperties.h  ResourceCache.cpp  ResourceCache.h  SkiaCanvas.cpp  SkiaCanvas.h  SkiaCanvasProxy.cpp  SkiaCanvasProxy.h  Texture.cpp  Texture.h  TextureCache.cpp  VkLayer.cpp
src/hwui/: Bitmap.cpp  Bitmap.h  Canvas.cpp  Canvas.h  Typeface.cpp
src/pipeline/skia/: SkiaRecordingCanvas.h
src/renderstate/: RenderState.cpp  RenderState.h
src/renderthread/: CanvasContext.cpp  CanvasContext.h  DrawFrameTask.cpp  DrawFrameTask.h  EglManager.cpp  EglManager.h  IRenderPipeline.h  OpenGLPipeline.cpp  OpenGLPipeline.h  RenderProxy.cpp  RenderProxy.h  RenderThread.cpp  RenderThread.h
src/thread/: TaskManager.cpp
src/utils/: TraceUtils.h
ui/: PixelFormat.h  Rect.cpp  Rect.h  Region.cpp
util/: EGLPlatformParameters.h  EGLWindow.cpp  EGLWindow.h  Event.h  OSPixmap.h  OSWindow.cpp  OSWindow.h  Timer.cpp  Timer.h  keyboard.h  mouse.h  no_destructor.h  system_utils.cpp  system_utils.h  system_utils_mac.cpp  system_utils_posix.cpp  util_gl.h
util/osx/: OSXWindow.h  OSXWindow.mm
utils/: CallStack.h  Log.h  Looper.h  RefBase.cpp  Thread.h  ThreadDefs.h  Threads.cpp  Trace.h  TypeHelpers.h  VectorImpl.cpp
